generated/ca/uwaterloo/gsd/rangeFix/AnnotationParser.output
Terminals unused in grammar

   ISXSUBSTR
   VERSIONCMP


Grammar

    0 $accept: node_annotations $end

    1 node_annotations: node_annotation
    2                 | node_annotations node_annotation

    3 $@1: /* empty */

    4 node_annotation: ID $@1 '{' inner_anntations '}'

    5 inner_anntations: inner_anntation
    6                 | inner_anntations inner_anntation

    7 inner_anntation: type_annotation
    8                | default_value
    9                | requires
   10                | active_if
   11                | calculated
   12                | legal_values

   13 type_annotation: TYPE applicable_files type

   14 applicable_files: /* empty */
   15                 | IN '(' files ')'

   16 files: STRING
   17      | files ',' STRING

   18 type: INTTYPE
   19     | STRINGTYPE
   20     | BOOLTYPE
   21     | ENUMTYPE '[' literal_list ']'

   22 literal_list: literal
   23             | literal_list ',' literal

   24 active_if: ACTIVEIF '[' expr ']' optional_old_expr applicable_files
   25          | ACTIVEIF '(' int ')' '[' expr ']' optional_old_expr applicable_files

   26 optional_old_expr: /* empty */
   27                  | REPLACING '[' expr ']'

   28 calculated: CALCULATED '[' expr ']' optional_old_expr applicable_files

   29 default_value: DEFAULT '[' expr ']' optional_old_expr applicable_files

   30 legal_values: LEGALVALUES '[' legal_value_list ']' optional_legal_value_list applicable_files

   31 optional_legal_value_list: /* empty */
   32                          | REPLACING '[' legal_value_list ']'

   33 legal_value_list: legal_value
   34                 | legal_value_list ',' legal_value

   35 legal_value: expr
   36            | expr TO expr

   37 requires: REQUIRES '[' expr ']' optional_old_expr applicable_files
   38         | REQUIRES '(' int ')' '[' expr ']' optional_old_expr applicable_files

   39 expr: expr '?' expr ':' expr
   40     | expr '|' expr
   41     | expr '&' expr
   42     | expr '=' expr
   43     | expr NEQ expr
   44     | expr GEQ expr
   45     | expr LEQ expr
   46     | expr '>' expr
   47     | expr '<' expr
   48     | expr '+' expr
   49     | expr '-' expr
   50     | expr '*' expr
   51     | expr '/' expr
   52     | expr '.' expr
   53     | expr '%' expr
   54     | expr IMPLIES expr
   55     | '!' expr
   56     | GETDATA '(' ID ')'
   57     | ISACTIVE '(' ID ')'
   58     | ISENABLED '(' ID ')'
   59     | ISLOADED '(' ID ')'
   60     | ISSUBSTR '(' expr ',' expr ')'
   61     | TOINT '(' expr ')'
   62     | TOSTRING '(' expr ')'
   63     | TOBOOL '(' expr ')'
   64     | '(' expr ')'
   65     | ID
   66     | literal

   67 literal: int
   68        | REAL
   69        | STRING

   70 int: INT
   71    | '-' INT
   72    | HEXINT


Terminals, with rules where they appear

$end (0) 0
'!' (33) 55
'%' (37) 53
'&' (38) 41
'(' (40) 15 25 38 56 57 58 59 60 61 62 63 64
')' (41) 15 25 38 56 57 58 59 60 61 62 63 64
'*' (42) 50
'+' (43) 48
',' (44) 17 23 34 60
'-' (45) 49 71
'.' (46) 52
'/' (47) 51
':' (58) 39
'<' (60) 47
'=' (61) 42
'>' (62) 46
'?' (63) 39
'[' (91) 21 24 25 27 28 29 30 32 37 38
']' (93) 21 24 25 27 28 29 30 32 37 38
'{' (123) 4
'|' (124) 40
'}' (125) 4
error (256)
DEFAULT (258) 29
REQUIRES (259) 37 38
ACTIVEIF (260) 24 25
LEGALVALUES (261) 30
CALCULATED (262) 28
NEQ (263) 43
GEQ (264) 44
LEQ (265) 45
TO (266) 36
IMPLIES (267) 54
GETDATA (268) 56
ISACTIVE (269) 57
ISENABLED (270) 58
ISLOADED (271) 59
ISSUBSTR (272) 60
ISXSUBSTR (273)
VERSIONCMP (274)
TOINT (275) 61
TOSTRING (276) 62
TOBOOL (277) 63
TYPE (278) 13
INTTYPE (279) 18
STRINGTYPE (280) 19
ENUMTYPE (281) 21
BOOLTYPE (282) 20
IN (283) 15
REPLACING (284) 27 32
ID (285) 4 56 57 58 59 65
STRING (286) 16 17 69
INT (287) 70 71
HEXINT (288) 72
REAL (289) 68


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
node_annotations (57)
    on left: 1 2, on right: 0 2
node_annotation (58)
    on left: 4, on right: 1 2
$@1 (59)
    on left: 3, on right: 4
inner_anntations (60)
    on left: 5 6, on right: 4 6
inner_anntation (61)
    on left: 7 8 9 10 11 12, on right: 5 6
type_annotation (62)
    on left: 13, on right: 7
applicable_files (63)
    on left: 14 15, on right: 13 24 25 28 29 30 37 38
files (64)
    on left: 16 17, on right: 15 17
type (65)
    on left: 18 19 20 21, on right: 13
literal_list (66)
    on left: 22 23, on right: 21 23
active_if (67)
    on left: 24 25, on right: 10
optional_old_expr (68)
    on left: 26 27, on right: 24 25 28 29 37 38
calculated (69)
    on left: 28, on right: 11
default_value (70)
    on left: 29, on right: 8
legal_values (71)
    on left: 30, on right: 12
optional_legal_value_list (72)
    on left: 31 32, on right: 30
legal_value_list (73)
    on left: 33 34, on right: 30 32 34
legal_value (74)
    on left: 35 36, on right: 33 34
requires (75)
    on left: 37 38, on right: 9
expr (76)
    on left: 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56
    57 58 59 60 61 62 63 64 65 66, on right: 24 25 27 28 29 35 36 37
    38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 60 61 62
    63 64
literal (77)
    on left: 67 68 69, on right: 22 23 66
int (78)
    on left: 70 71 72, on right: 25 38 67


state 0

    0 $accept: . node_annotations $end

    ID  shift, and go to state 1

    node_annotations  go to state 2
    node_annotation   go to state 3


state 1

    4 node_annotation: ID . $@1 '{' inner_anntations '}'

    $default  reduce using rule 3 ($@1)

    $@1  go to state 4


state 2

    0 $accept: node_annotations . $end
    2 node_annotations: node_annotations . node_annotation

    $end  shift, and go to state 5
    ID    shift, and go to state 1

    node_annotation  go to state 6


state 3

    1 node_annotations: node_annotation .

    $default  reduce using rule 1 (node_annotations)


state 4

    4 node_annotation: ID $@1 . '{' inner_anntations '}'

    '{'  shift, and go to state 7


state 5

    0 $accept: node_annotations $end .

    $default  accept


state 6

    2 node_annotations: node_annotations node_annotation .

    $default  reduce using rule 2 (node_annotations)


state 7

    4 node_annotation: ID $@1 '{' . inner_anntations '}'

    DEFAULT      shift, and go to state 8
    REQUIRES     shift, and go to state 9
    ACTIVEIF     shift, and go to state 10
    LEGALVALUES  shift, and go to state 11
    CALCULATED   shift, and go to state 12
    TYPE         shift, and go to state 13

    inner_anntations  go to state 14
    inner_anntation   go to state 15
    type_annotation   go to state 16
    active_if         go to state 17
    calculated        go to state 18
    default_value     go to state 19
    legal_values      go to state 20
    requires          go to state 21


state 8

   29 default_value: DEFAULT . '[' expr ']' optional_old_expr applicable_files

    '['  shift, and go to state 22


state 9

   37 requires: REQUIRES . '[' expr ']' optional_old_expr applicable_files
   38         | REQUIRES . '(' int ')' '[' expr ']' optional_old_expr applicable_files

    '('  shift, and go to state 23
    '['  shift, and go to state 24


state 10

   24 active_if: ACTIVEIF . '[' expr ']' optional_old_expr applicable_files
   25          | ACTIVEIF . '(' int ')' '[' expr ']' optional_old_expr applicable_files

    '('  shift, and go to state 25
    '['  shift, and go to state 26


state 11

   30 legal_values: LEGALVALUES . '[' legal_value_list ']' optional_legal_value_list applicable_files

    '['  shift, and go to state 27


state 12

   28 calculated: CALCULATED . '[' expr ']' optional_old_expr applicable_files

    '['  shift, and go to state 28


state 13

   13 type_annotation: TYPE . applicable_files type

    IN  shift, and go to state 29

    $default  reduce using rule 14 (applicable_files)

    applicable_files  go to state 30


state 14

    4 node_annotation: ID $@1 '{' inner_anntations . '}'
    6 inner_anntations: inner_anntations . inner_anntation

    DEFAULT      shift, and go to state 8
    REQUIRES     shift, and go to state 9
    ACTIVEIF     shift, and go to state 10
    LEGALVALUES  shift, and go to state 11
    CALCULATED   shift, and go to state 12
    TYPE         shift, and go to state 13
    '}'          shift, and go to state 31

    inner_anntation  go to state 32
    type_annotation  go to state 16
    active_if        go to state 17
    calculated       go to state 18
    default_value    go to state 19
    legal_values     go to state 20
    requires         go to state 21


state 15

    5 inner_anntations: inner_anntation .

    $default  reduce using rule 5 (inner_anntations)


state 16

    7 inner_anntation: type_annotation .

    $default  reduce using rule 7 (inner_anntation)


state 17

   10 inner_anntation: active_if .

    $default  reduce using rule 10 (inner_anntation)


state 18

   11 inner_anntation: calculated .

    $default  reduce using rule 11 (inner_anntation)


state 19

    8 inner_anntation: default_value .

    $default  reduce using rule 8 (inner_anntation)


state 20

   12 inner_anntation: legal_values .

    $default  reduce using rule 12 (inner_anntation)


state 21

    9 inner_anntation: requires .

    $default  reduce using rule 9 (inner_anntation)


state 22

   29 default_value: DEFAULT '[' . expr ']' optional_old_expr applicable_files

    GETDATA    shift, and go to state 33
    ISACTIVE   shift, and go to state 34
    ISENABLED  shift, and go to state 35
    ISLOADED   shift, and go to state 36
    ISSUBSTR   shift, and go to state 37
    TOINT      shift, and go to state 38
    TOSTRING   shift, and go to state 39
    TOBOOL     shift, and go to state 40
    ID         shift, and go to state 41
    STRING     shift, and go to state 42
    INT        shift, and go to state 43
    HEXINT     shift, and go to state 44
    REAL       shift, and go to state 45
    '!'        shift, and go to state 46
    '-'        shift, and go to state 47
    '('        shift, and go to state 48

    expr     go to state 49
    literal  go to state 50
    int      go to state 51


state 23

   38 requires: REQUIRES '(' . int ')' '[' expr ']' optional_old_expr applicable_files

    INT     shift, and go to state 43
    HEXINT  shift, and go to state 44
    '-'     shift, and go to state 47

    int  go to state 52


state 24

   37 requires: REQUIRES '[' . expr ']' optional_old_expr applicable_files

    GETDATA    shift, and go to state 33
    ISACTIVE   shift, and go to state 34
    ISENABLED  shift, and go to state 35
    ISLOADED   shift, and go to state 36
    ISSUBSTR   shift, and go to state 37
    TOINT      shift, and go to state 38
    TOSTRING   shift, and go to state 39
    TOBOOL     shift, and go to state 40
    ID         shift, and go to state 41
    STRING     shift, and go to state 42
    INT        shift, and go to state 43
    HEXINT     shift, and go to state 44
    REAL       shift, and go to state 45
    '!'        shift, and go to state 46
    '-'        shift, and go to state 47
    '('        shift, and go to state 48

    expr     go to state 53
    literal  go to state 50
    int      go to state 51


state 25

   25 active_if: ACTIVEIF '(' . int ')' '[' expr ']' optional_old_expr applicable_files

    INT     shift, and go to state 43
    HEXINT  shift, and go to state 44
    '-'     shift, and go to state 47

    int  go to state 54


state 26

   24 active_if: ACTIVEIF '[' . expr ']' optional_old_expr applicable_files

    GETDATA    shift, and go to state 33
    ISACTIVE   shift, and go to state 34
    ISENABLED  shift, and go to state 35
    ISLOADED   shift, and go to state 36
    ISSUBSTR   shift, and go to state 37
    TOINT      shift, and go to state 38
    TOSTRING   shift, and go to state 39
    TOBOOL     shift, and go to state 40
    ID         shift, and go to state 41
    STRING     shift, and go to state 42
    INT        shift, and go to state 43
    HEXINT     shift, and go to state 44
    REAL       shift, and go to state 45
    '!'        shift, and go to state 46
    '-'        shift, and go to state 47
    '('        shift, and go to state 48

    expr     go to state 55
    literal  go to state 50
    int      go to state 51


state 27

   30 legal_values: LEGALVALUES '[' . legal_value_list ']' optional_legal_value_list applicable_files

    GETDATA    shift, and go to state 33
    ISACTIVE   shift, and go to state 34
    ISENABLED  shift, and go to state 35
    ISLOADED   shift, and go to state 36
    ISSUBSTR   shift, and go to state 37
    TOINT      shift, and go to state 38
    TOSTRING   shift, and go to state 39
    TOBOOL     shift, and go to state 40
    ID         shift, and go to state 41
    STRING     shift, and go to state 42
    INT        shift, and go to state 43
    HEXINT     shift, and go to state 44
    REAL       shift, and go to state 45
    '!'        shift, and go to state 46
    '-'        shift, and go to state 47
    '('        shift, and go to state 48

    legal_value_list  go to state 56
    legal_value       go to state 57
    expr              go to state 58
    literal           go to state 50
    int               go to state 51


state 28

   28 calculated: CALCULATED '[' . expr ']' optional_old_expr applicable_files

    GETDATA    shift, and go to state 33
    ISACTIVE   shift, and go to state 34
    ISENABLED  shift, and go to state 35
    ISLOADED   shift, and go to state 36
    ISSUBSTR   shift, and go to state 37
    TOINT      shift, and go to state 38
    TOSTRING   shift, and go to state 39
    TOBOOL     shift, and go to state 40
    ID         shift, and go to state 41
    STRING     shift, and go to state 42
    INT        shift, and go to state 43
    HEXINT     shift, and go to state 44
    REAL       shift, and go to state 45
    '!'        shift, and go to state 46
    '-'        shift, and go to state 47
    '('        shift, and go to state 48

    expr     go to state 59
    literal  go to state 50
    int      go to state 51


state 29

   15 applicable_files: IN . '(' files ')'

    '('  shift, and go to state 60


state 30

   13 type_annotation: TYPE applicable_files . type

    INTTYPE     shift, and go to state 61
    STRINGTYPE  shift, and go to state 62
    ENUMTYPE    shift, and go to state 63
    BOOLTYPE    shift, and go to state 64

    type  go to state 65


state 31

    4 node_annotation: ID $@1 '{' inner_anntations '}' .

    $default  reduce using rule 4 (node_annotation)


state 32

    6 inner_anntations: inner_anntations inner_anntation .

    $default  reduce using rule 6 (inner_anntations)


state 33

   56 expr: GETDATA . '(' ID ')'

    '('  shift, and go to state 66


state 34

   57 expr: ISACTIVE . '(' ID ')'

    '('  shift, and go to state 67


state 35

   58 expr: ISENABLED . '(' ID ')'

    '('  shift, and go to state 68


state 36

   59 expr: ISLOADED . '(' ID ')'

    '('  shift, and go to state 69


state 37

   60 expr: ISSUBSTR . '(' expr ',' expr ')'

    '('  shift, and go to state 70


state 38

   61 expr: TOINT . '(' expr ')'

    '('  shift, and go to state 71


state 39

   62 expr: TOSTRING . '(' expr ')'

    '('  shift, and go to state 72


state 40

   63 expr: TOBOOL . '(' expr ')'

    '('  shift, and go to state 73


state 41

   65 expr: ID .

    $default  reduce using rule 65 (expr)


state 42

   69 literal: STRING .

    $default  reduce using rule 69 (literal)


state 43

   70 int: INT .

    $default  reduce using rule 70 (int)


state 44

   72 int: HEXINT .

    $default  reduce using rule 72 (int)


state 45

   68 literal: REAL .

    $default  reduce using rule 68 (literal)


state 46

   55 expr: '!' . expr

    GETDATA    shift, and go to state 33
    ISACTIVE   shift, and go to state 34
    ISENABLED  shift, and go to state 35
    ISLOADED   shift, and go to state 36
    ISSUBSTR   shift, and go to state 37
    TOINT      shift, and go to state 38
    TOSTRING   shift, and go to state 39
    TOBOOL     shift, and go to state 40
    ID         shift, and go to state 41
    STRING     shift, and go to state 42
    INT        shift, and go to state 43
    HEXINT     shift, and go to state 44
    REAL       shift, and go to state 45
    '!'        shift, and go to state 46
    '-'        shift, and go to state 47
    '('        shift, and go to state 48

    expr     go to state 74
    literal  go to state 50
    int      go to state 51


state 47

   71 int: '-' . INT

    INT  shift, and go to state 75


state 48

   64 expr: '(' . expr ')'

    GETDATA    shift, and go to state 33
    ISACTIVE   shift, and go to state 34
    ISENABLED  shift, and go to state 35
    ISLOADED   shift, and go to state 36
    ISSUBSTR   shift, and go to state 37
    TOINT      shift, and go to state 38
    TOSTRING   shift, and go to state 39
    TOBOOL     shift, and go to state 40
    ID         shift, and go to state 41
    STRING     shift, and go to state 42
    INT        shift, and go to state 43
    HEXINT     shift, and go to state 44
    REAL       shift, and go to state 45
    '!'        shift, and go to state 46
    '-'        shift, and go to state 47
    '('        shift, and go to state 48

    expr     go to state 76
    literal  go to state 50
    int      go to state 51


state 49

   29 default_value: DEFAULT '[' expr . ']' optional_old_expr applicable_files
   39 expr: expr . '?' expr ':' expr
   40     | expr . '|' expr
   41     | expr . '&' expr
   42     | expr . '=' expr
   43     | expr . NEQ expr
   44     | expr . GEQ expr
   45     | expr . LEQ expr
   46     | expr . '>' expr
   47     | expr . '<' expr
   48     | expr . '+' expr
   49     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '/' expr
   52     | expr . '.' expr
   53     | expr . '%' expr
   54     | expr . IMPLIES expr

    NEQ      shift, and go to state 77
    GEQ      shift, and go to state 78
    LEQ      shift, and go to state 79
    IMPLIES  shift, and go to state 80
    '?'      shift, and go to state 81
    '|'      shift, and go to state 82
    '&'      shift, and go to state 83
    '='      shift, and go to state 84
    '>'      shift, and go to state 85
    '<'      shift, and go to state 86
    '+'      shift, and go to state 87
    '-'      shift, and go to state 88
    '.'      shift, and go to state 89
    '*'      shift, and go to state 90
    '/'      shift, and go to state 91
    '%'      shift, and go to state 92
    ']'      shift, and go to state 93


state 50

   66 expr: literal .

    $default  reduce using rule 66 (expr)


state 51

   67 literal: int .

    $default  reduce using rule 67 (literal)


state 52

   38 requires: REQUIRES '(' int . ')' '[' expr ']' optional_old_expr applicable_files

    ')'  shift, and go to state 94


state 53

   37 requires: REQUIRES '[' expr . ']' optional_old_expr applicable_files
   39 expr: expr . '?' expr ':' expr
   40     | expr . '|' expr
   41     | expr . '&' expr
   42     | expr . '=' expr
   43     | expr . NEQ expr
   44     | expr . GEQ expr
   45     | expr . LEQ expr
   46     | expr . '>' expr
   47     | expr . '<' expr
   48     | expr . '+' expr
   49     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '/' expr
   52     | expr . '.' expr
   53     | expr . '%' expr
   54     | expr . IMPLIES expr

    NEQ      shift, and go to state 77
    GEQ      shift, and go to state 78
    LEQ      shift, and go to state 79
    IMPLIES  shift, and go to state 80
    '?'      shift, and go to state 81
    '|'      shift, and go to state 82
    '&'      shift, and go to state 83
    '='      shift, and go to state 84
    '>'      shift, and go to state 85
    '<'      shift, and go to state 86
    '+'      shift, and go to state 87
    '-'      shift, and go to state 88
    '.'      shift, and go to state 89
    '*'      shift, and go to state 90
    '/'      shift, and go to state 91
    '%'      shift, and go to state 92
    ']'      shift, and go to state 95


state 54

   25 active_if: ACTIVEIF '(' int . ')' '[' expr ']' optional_old_expr applicable_files

    ')'  shift, and go to state 96


state 55

   24 active_if: ACTIVEIF '[' expr . ']' optional_old_expr applicable_files
   39 expr: expr . '?' expr ':' expr
   40     | expr . '|' expr
   41     | expr . '&' expr
   42     | expr . '=' expr
   43     | expr . NEQ expr
   44     | expr . GEQ expr
   45     | expr . LEQ expr
   46     | expr . '>' expr
   47     | expr . '<' expr
   48     | expr . '+' expr
   49     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '/' expr
   52     | expr . '.' expr
   53     | expr . '%' expr
   54     | expr . IMPLIES expr

    NEQ      shift, and go to state 77
    GEQ      shift, and go to state 78
    LEQ      shift, and go to state 79
    IMPLIES  shift, and go to state 80
    '?'      shift, and go to state 81
    '|'      shift, and go to state 82
    '&'      shift, and go to state 83
    '='      shift, and go to state 84
    '>'      shift, and go to state 85
    '<'      shift, and go to state 86
    '+'      shift, and go to state 87
    '-'      shift, and go to state 88
    '.'      shift, and go to state 89
    '*'      shift, and go to state 90
    '/'      shift, and go to state 91
    '%'      shift, and go to state 92
    ']'      shift, and go to state 97


state 56

   30 legal_values: LEGALVALUES '[' legal_value_list . ']' optional_legal_value_list applicable_files
   34 legal_value_list: legal_value_list . ',' legal_value

    ','  shift, and go to state 98
    ']'  shift, and go to state 99


state 57

   33 legal_value_list: legal_value .

    $default  reduce using rule 33 (legal_value_list)


state 58

   35 legal_value: expr .
   36            | expr . TO expr
   39 expr: expr . '?' expr ':' expr
   40     | expr . '|' expr
   41     | expr . '&' expr
   42     | expr . '=' expr
   43     | expr . NEQ expr
   44     | expr . GEQ expr
   45     | expr . LEQ expr
   46     | expr . '>' expr
   47     | expr . '<' expr
   48     | expr . '+' expr
   49     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '/' expr
   52     | expr . '.' expr
   53     | expr . '%' expr
   54     | expr . IMPLIES expr

    NEQ      shift, and go to state 77
    GEQ      shift, and go to state 78
    LEQ      shift, and go to state 79
    TO       shift, and go to state 100
    IMPLIES  shift, and go to state 80
    '?'      shift, and go to state 81
    '|'      shift, and go to state 82
    '&'      shift, and go to state 83
    '='      shift, and go to state 84
    '>'      shift, and go to state 85
    '<'      shift, and go to state 86
    '+'      shift, and go to state 87
    '-'      shift, and go to state 88
    '.'      shift, and go to state 89
    '*'      shift, and go to state 90
    '/'      shift, and go to state 91
    '%'      shift, and go to state 92

    $default  reduce using rule 35 (legal_value)


state 59

   28 calculated: CALCULATED '[' expr . ']' optional_old_expr applicable_files
   39 expr: expr . '?' expr ':' expr
   40     | expr . '|' expr
   41     | expr . '&' expr
   42     | expr . '=' expr
   43     | expr . NEQ expr
   44     | expr . GEQ expr
   45     | expr . LEQ expr
   46     | expr . '>' expr
   47     | expr . '<' expr
   48     | expr . '+' expr
   49     | expr . '-' expr
   50     | expr . '*' expr
   51     | expr . '/' expr
   52     | expr . '.' expr
   53     | expr . '%' expr
   54     | expr . IMPLIES expr

    NEQ      shift, and go to state 77
    GEQ      shift, and go to state 78
    LEQ      shift, and go to state 79
    IMPLIES  shift, and go to state 80
    '?'      shift, and go to state 81
    '|'      shift, and go to state 82
    '&'      shift, and go to state 83
    '='      shift, and go to state 84
    '>'      shift, and go to state 85
    '<'      shift, and go to state 86
    '+'      shift, and go to state 87
    '-'      shift, and go to state 88
    '.'      shift, and go to state 89
    '*'      shift, and go to state 90
    '/'      shift, and go to state 91
    '%'      shift, and go to state 92
    ']'      shift, and go to state 101


state 60

   15 applicable_files: IN '(' . files ')'

    STRING  shift, and go to state 102

    files  go to state 103


state 61

   18 type: INTTYPE .

    $default  reduce using rule 18 (type)


state 62

   19 type: STRINGTYPE .

    $default  reduce using rule 19 (type)


state 63

   21 type: ENUMTYPE . '[' literal_list ']'

    '['  shift, and go to state 104


state 64

   20 type: BOOLTYPE .

    $default  reduce using rule 20 (type)


state 65

   13 type_annotation: TYPE applicable_files type .

    $default  reduce using rule 13 (type_annotation)


state 66

   56 expr: GETDATA '(' . ID ')'

    ID  shift, and go to state 105


state 67

   57 expr: ISACTIVE '(' . ID ')'

    ID  shift, and go to state 106


state 68

   58 expr: ISENABLED '(' . ID ')'

    ID  shift, and go to state 107


state 69

   59 expr: ISLOADED '(' . ID ')'

    ID  shift, and go to state 108


state 70

   60 expr: ISSUBSTR '(' . expr ',' expr ')'

    GETDATA    shift, and go to state 33
    ISACTIVE   shift, and go to state 34
    ISENABLED  shift, and go to state 35
    ISLOADED   shift, and go to state 36
    ISSUBSTR   shift, and go to state 37
    TOINT      shift, and go to state 38
    TOSTRING   shift, and go to state 39
    TOBOOL     shift, and go to state 40
    ID         shift, and go to state 41
    STRING     shift, and go to state 42
    INT        shift, and go to state 43
    HEXINT     shift, and go to state 44
    REAL       shift, and go to state 45
    '!'        shift, and go to state 46
    '-'        shift, and go to state 47
    '('        shift, and go to state 48

